--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.13.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-grid-system": "^6.3.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
